syntax = "proto3";

enum RestartPolicyMode {
    DEFAULT = 0;          // Agent chooses default (unless-stopped for normal runs)
    UNLESS_STOPPED = 1;   // --restart unless-stopped
    NO = 2;               // --restart no
    ON_FAILURE = 3;       // --restart on-failure:N (see on_failure_max_retries)
}

message RestartPolicy {
    RestartPolicyMode mode = 1;
    
    // Only used when mode==ON_FAILURE
    int32 on_failure_max_retries = 2;
}

enum AppRunningState {
    STOPPED = 0;
    RUNNING = 1;
}

message AppContainer {
    string app_name = 1;
    string app_version = 2;
    AppRunningState running_state = 3;
    uint32 failure_count = 4;
}